<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modulo1.RecuperarPassword1"
    android:background="@color/black">

    <View
        android:id="@+id/tono"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="750dp"
        android:backgroundTint="@color/barbie"
        android:text="@string/Regresar"
        android:textColor="@color/black"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/silvia"
        android:layout_width="340dp"
        android:layout_height="384dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/backgroundLight"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/recuperando_Password"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rellenoRecuperar"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCorreoRecuperar"
                android:layout_width="255dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:hint="@string/correoRecuperar"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/hintLightColor" />

            <Button
                android:id="@+id/btnEnviarPin"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/turkesa"
                android:text="@string/next"
                android:textColor="@color/black"
                app:cornerRadius="40dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
