<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modulo1.RecuperarPasswordActivity"
    android:background="@color/black"
    >
    
    <View
        android:id="@+id/tono"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/background"
        >

    </View>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="750dp"
        app:cornerRadius="40dp"
        android:backgroundTint="@color/barbie"
        android:text="@string/Regresar"
        android:textColor="@color/black">

    </Button>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/silvia"
        android:layout_width="340dp"
        android:layout_height="384dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="30dp"
        android:backgroundTint="@color/backgroundLight">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperando_Password"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rellenoRecuperar"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp">
                        
            </TextView>
            
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="255dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:text="@string/correoRecuperar"
                android:textColor="@color/white"
                android:textColorHint="@color/hintLightColor">
            </androidx.appcompat.widget.AppCompatEditText>
            
            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                app:cornerRadius="40dp"
                android:backgroundTint="@color/turkesa"
                android:text="@string/next"
                android:textColor="@color/black">

            </Button>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
    
    
    
</androidx.constraintlayout.widget.ConstraintLayout>
 
