<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".modulo1.ModOneActivityOne">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/im_1"/>

        <View
            android:id="@+id/view"
            android:layout_width="392dp"
            android:layout_height="416dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="340dp"
            android:layout_height="384dp"
            android:layout_marginTop="350dp"
            android:backgroundTint="@color/backgroundLight"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="34.5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/WelcomeModOne"
                    android:textSize="25sp"
                    android:layout_marginTop="9dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMailLogIn"
                    android:layout_width="255dp"
                    android:layout_height="40dp"
                    android:hint="@string/GmailLogin"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hintLightColor"
                    android:textColor="@color/hintLightColor" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPasswordLogIn"
                    android:layout_width="255dp"
                    android:layout_height="40dp"
                    android:hint="@string/PasswordLogin"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hintLightColor"
                    android:textColor="@color/hintLightColor"
                    android:inputType="textPassword"
                    />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="37dp"
                    android:backgroundTint="@color/turkesa"
                    android:text="@string/next"
                    android:textColor="@color/black"
                    app:cornerRadius="20dp"
                    android:layout_marginStart="7dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnLogInForgot"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/background"
            android:textColor="@color/turkesa"
            android:text="@string/ForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="24dp"
            android:text="@string/no_tienes_cuenta"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/background"
            android:text="@string/registrarse"
            android:textColor="@color/turkesa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
