<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicioApp.MainActivity"
    android:background="@color/background">

    <!-- ScrollView como contenedor principal -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Layout contenedor del contenido -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <!-- Indicadores de progreso -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/turkesa"
                    app:cardCornerRadius="100dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/turkesa"
                    app:cardCornerRadius="100dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/turkesa"
                    app:cardCornerRadius="100dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/turkesa"
                    app:cardCornerRadius="100dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Contenido textual -->
            <TextView
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/loremPermisos2"
                android:textColor="@color/white"
                android:textSize="35sp"/>

            <TextView
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/textPermisos2"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="337dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:text="@string/textPermiso2_2"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <!-- Botones de acción -->
            <Button
                android:id="@+id/btnMainFiveNext"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/turkesa"
                android:text="@string/next"
                android:textColor="@color/black"
                app:cornerRadius="20dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF4C85"
                android:text="@string/BACK"
                android:textColor="@color/black"
                app:cornerRadius="20dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>